apps/hello-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
  labels:
    app: hello-app
spec:
  selector:
    app: hello-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
